--- a/article-journal.tex
+++ b/article-journal.tex
@@ -25,7 +25,7 @@
 
 \pretitle{\begin{center}\Huge\bfseries} % Article title formatting
 \posttitle{\end{center}} % Article title closing formatting
-\title{\Large{PENGEMBANGAN SISTEM HMI SUMBER TERBUKA UNTUK PLC OMRON BERBASIS PROTOKOL FINS DENGAN VISUALISASI WEB}} % Article title
+\title{\Large{RANCANG BANGUN SISTEM HMI SUMBER TERBUKA UNTUK PLC OMRON BERBASIS PROTOKOL FINS DENGAN VISUALISASI WEB PADA PT XYZ}} % Article title
 \author{%
     \textsc{Denny Chrisnanda} \\ % Your name
     \normalsize {Universitas Hasanuddin} \\ % Your institution
