--- a/bibtex/daftar-pustaka.bib
+++ b/bibtex/daftar-pustaka.bib
@@ -122,3 +122,34 @@
   year = {2023},
   note = {Accessed July 2025}
 }
+
+@article{hazdi2017scada,
+  author = {Robby Hazdi and Muhammad Fadli and Yusril Maulana},
+  title = {Perancangan SCADA pada Sistem Otomatisasi Rumah},
+  journal = {eProceedings of Applied Science},
+  volume = {3},
+  number = {2},
+  year = {2017},
+  pages = {1099--1106},
+  url = {https://openlibrarypublications.telkomuniversity.ac.id/index.php/appliedscience/article/view/4046},
+  note = {Universitas Telkom}
+}
+
+@online{banthia2024vendorlockin,
+  author    = {Bakul Banthia},
+  title     = {Understanding the Risks of Cloud Vendor Lock-In},
+  year      = {2024},
+  date      = {2024-08-13},
+  url       = {https://drj.com/industry_news/understanding-the-risks-of-cloud-vendor-lock-in/},
+  note      = {Disaster Recovery Journal},
+  organization = {Tessell}
+}
+
+@online{electron2024why,
+  title = {Why Electron},
+  author = {{Electron Team}},
+  year = {2024},
+  url = {https://www.electronjs.org/docs/latest/why-electron},
+  note = {Accessed: 2025-07-18},
+  organization = {ElectronJS}
+}
