--- a/seminar-hasil.tex
+++ b/seminar-hasil.tex
@@ -6,7 +6,7 @@
 %===========================================================
 % Definisi Data Peneliti, Judul, Pembimbing dan Penguji
 %-----------------------------------------------------------
-\titleskripsi{PENGEMBANGAN SISTEM HMI SUMBER TERBUKA UNTUK PLC OMRON BERBASIS PROTOKOL FINS DENGAN VISUALISASI WEB}
+\titleskripsi{RANCANG BANGUN SISTEM HMI SUMBER TERBUKA UNTUK PLC OMRON BERBASIS PROTOKOL FINS DENGAN VISUALISASI WEB PADA PT XYZ}
 
 \fullname{Denny Chrisnanwwda}
 \idnum{2502124913}
