--- a/seminar-proposal.tex
+++ b/seminar-proposal.tex
@@ -5,7 +5,7 @@
 %===========================================================
 % Definisi Data Peneliti, Judul, Pembimbing dan Penguji
 %-----------------------------------------------------------
-\titleskripsi{PENGEMBANGAN SISTEM HMI SUMBER TERBUKA UNTUK PLC OMRON BERBASIS PROTOKOL FINS DENGAN VISUALISASI WEB}
+\titleskripsi{RANCANG BANGUN SISTEM HMI SUMBER TERBUKA UNTUK PLC OMRON BERBASIS PROTOKOL FINS DENGAN VISUALISASI WEB PADA PT XYZ}
 
 \fullname{Denny Chrisnanda}
 \idnum{2502124914}
