--- a/bibtex/daftar-pustaka.bib
+++ b/bibtex/daftar-pustaka.bib
@@ -153,3 +153,24 @@
   note = {Accessed: 2025-07-18},
   organization = {ElectronJS}
 }
+
+@article{llopis2020industry,
+  author    = {Llopis-Albert, Carlos and Rubio, Francisco and Valero, Fernando},
+  title     = {Impact of digital transformation on the automotive industry},
+  journal   = {Technological Forecasting and Social Change},
+  volume    = {162},
+  year      = {2020},
+  pages     = {120343},
+  doi       = {10.1016/j.techfore.2020.120343}
+}
+
+@article{rubio2019disruptive,
+  author    = {Rubio, Francisco and Valero, Fernando and Llopis-Albert, Carlos},
+  title     = {Disruptive effects of electric vehicles on automotive supply chain},
+  journal   = {Case Studies on Transport Policy},
+  volume    = {7},
+  number    = {2},
+  year      = {2019},
+  pages     = {218--229},
+  doi       = {10.1016/j.cstp.2019.01.006}
+}
