--- a/seminar-proposal.tex
+++ b/seminar-proposal.tex
@@ -7,8 +7,12 @@
 %-----------------------------------------------------------
 \titleskripsi{RANCANG BANGUN SISTEM HMI SUMBER TERBUKA UNTUK PLC OMRON BERBASIS PROTOKOL FINS DENGAN VISUALISASI WEB PADA PT XYZ}
 
-\fullname{Denny Chrisnanda}
-\idnum{2502124914}
+\fullnameA{DENNY CHRISNANDA}
+\idnumA{2502124914}
+\fullnameB{FRANS SEBASTIAN}
+\idnumB{2502121162}
+\fullnameC{GILANG HANSAGITA}
+\idnumC{2502124403}
 
 
 
@@ -29,48 +33,48 @@
 %===========================================================
 
 \begin{document}
-    \noindent
-    %\textit{Seminar I}
-    \coverproposal
-    \pagenumbering{roman}
-    
-    %===========================================================
-    % Daftar isi, daftar gambar, daftar tabel
-    %-----------------------------------------------------------
-    \addcontentsline{toc}{chapter}{DAFTAR ISI}
-    \tableofcontents
-    \pagebreak
+\noindent
+%\textit{Seminar I}
+\coverproposal
+\pagenumbering{roman}
 
-    \addcontentsline{toc}{chapter}{DAFTAR TABEL}
-    \listoftables
-    \pagebreak
+%===========================================================
+% Daftar isi, daftar gambar, daftar tabel
+%-----------------------------------------------------------
+\addcontentsline{toc}{chapter}{DAFTAR ISI}
+\tableofcontents
+\pagebreak
 
-    \addcontentsline{toc}{chapter}{DAFTAR GAMBAR}
-    \listoffigures
-    \pagebreak
+\addcontentsline{toc}{chapter}{DAFTAR TABEL}
+\listoftables
+\pagebreak
 
-    \pagenumbering{arabic}
-    %-----------------------------------------------------------
-    % End Daftar isi, daftar gambar, daftar tabel
-    %===========================================================
+\addcontentsline{toc}{chapter}{DAFTAR GAMBAR}
+\listoffigures
+\pagebreak
 
-    %===========================================================
-    % Daftar masukan untuk Bab
-    %-----------------------------------------------------------
-    \input{include/bab1.tex}
-    \input{include/bab2.tex}
-    \input{include/bab3.tex}
-    %-----------------------------------------------------------
-    % End Daftar masukan untuk Bab
-    %===========================================================
+\pagenumbering{arabic}
+%-----------------------------------------------------------
+% End Daftar isi, daftar gambar, daftar tabel
+%===========================================================
 
-    %===========================================================
-    % Daftar Pustaka
-    %-----------------------------------------------------------
-    \addcontentsline{toc}{chapter}{DAFTAR PUSTAKA}
-    \printbibliography[title={DAFTAR PUSTAKA}]
-    %-----------------------------------------------------------
-    % End Daftar Pustaka
-    %===========================================================
+%===========================================================
+% Daftar masukan untuk Bab
+%-----------------------------------------------------------
+\input{include/bab1.tex}
+\input{include/bab2.tex}
+\input{include/bab3.tex}
+%-----------------------------------------------------------
+% End Daftar masukan untuk Bab
+%===========================================================
+
+%===========================================================
+% Daftar Pustaka
+%-----------------------------------------------------------
+\addcontentsline{toc}{chapter}{DAFTAR PUSTAKA}
+\printbibliography[title={DAFTAR PUSTAKA}]
+%-----------------------------------------------------------
+% End Daftar Pustaka
+%===========================================================
 
 \end{document}
