--- a/seminar-proposal.tex
+++ b/seminar-proposal.tex
@@ -19,7 +19,7 @@
 
 \yearsubmit{2025}
 \program{Computer Science Study Program}
-\dept{~}
+%\dept{~}
 \faculty{BINUS Online Learning}
 \university{Universitas Bina Nusantara}
 \city{Jakarta}
