add for journal ts, node, web, html, and css

--- a/bibtex/daftar-pustaka.bib
+++ b/bibtex/daftar-pustaka.bib
@@ -174,3 +174,47 @@
   pages     = {218--229},
   doi       = {10.1016/j.cstp.2019.01.006}
 }
+
+@article{emmanni2025typescript,
+  author  = {Emmanni, Phani Sekhar},
+  title   = {The Role of TypeScript in Enhancing Development with Modern JavaScript Frameworks},
+  journal = {International Journal of Scientific & Engineering Research (IJSR)},
+  volume  = {11},
+  number  = {1},
+  year    = {2025}
+}
+
+@article{abbas2015efficient,
+  author  = {Abbas, Hosny A.},
+  title   = {Efficient Web-Based SCADA System},
+  journal = {arXiv preprint arXiv:1501.05725},
+  year    = {2015}
+}
+
+@article{scarsbrook2023typescript,
+  author  = {Scarsbrook, Joshua D. and Utting, Mark and Ko, Ryan K.~L.},
+  title   = {TypeScript's Evolution: An Analysis of Feature Adoption Over Time},
+  journal = {arXiv preprint arXiv:2303.09802},
+  year    = {2023}
+}
+
+@article{omidi2023node_red_scada,
+  author  = {Omidi, S.~A. and Baig, M.~J.~A. and Iqbal, M.~T.},
+  title   = {Design and Implementation of Node-Red Based Open-Source SCADA Architecture for a Hybrid Power System},
+  journal = {Energies},
+  volume  = {16},
+  number  = {5},
+  year    = {2023},
+  doi     = {10.3390/en16052092}
+}
+
+@article{eras_almeida2023off_grid_pv,
+  author  = {Eras-Almeida, Andrea A. and Vásquez-Hernández, Tatiana and Hurtado-Moncada, Merlyn J. and Egido-Aguilera, Miguel A.},
+  title   = {A Comprehensive Evaluation of Off-Grid Photovoltaic Experiences in Non-Interconnected Zones of Colombia: Integrating a Sustainable Perspective},
+  journal = {Energies},
+  volume  = {16},
+  number  = {5},
+  pages   = {2292},
+  year    = {2023},
+  doi     = {10.3390/en16052292}
+}
