--- a/include/bab2.tex
+++ b/include/bab2.tex
@@ -91,6 +91,10 @@ Beberapa studi telah membuktikan efektivitas SCADA open-source dalam dunia indus
 \item \textcite{omidi2023node} menggunakan SCADA open-source untuk pembangkit listrik hibrid, menekankan efisiensi energi.
 \item \textcite{almas2014open} menunjukkan integrasi SCADA open-source dengan PMU dan protokol DNP3.
 \item \textcite{rubiomedrano2023icsnet} menerapkan FUXA pada honeynet ICSNet untuk mensimulasikan serangan siber industri.
+\item \textcite{emmanni2025typescript} menjelaskan bagaimana penggunaan TypeScript dalam pengembangan framework JavaScript modern seperti Angular meningkatkan keandalan dan skalabilitas aplikasi SCADA berbasis web.
+\item \textcite{abbas2015efficient} mengusulkan protokol komunikasi SCADA yang efisien untuk otomasi industri guna mengurangi latensi dan meningkatkan integritas data.
+\item \textcite{scarsbrook2023typescript} menyoroti keunggulan TypeScript dalam meningkatkan keamanan tipe dan produktivitas tim pengembang dalam proyek perangkat lunak berskala besar, termasuk sistem SCADA.
+\item \textcite{eras_almeida2023off_grid_pv} melakukan evaluasi kinerja SCADA open-source dalam sistem pembangkit tenaga surya off-grid, dengan fokus pada keandalan monitoring dan kontrol sistem energi terdistribusi.
 \end{itemize}
 \subsection{Implementasi SCADA pada Sistem Otomatisasi Rumah}
 Sistem SCADA tidak hanya digunakan pada industri manufaktur skala besar, tetapi juga mulai diimplementasikan dalam sistem otomasi rumah (smart home). Penelitian oleh Hazdi et al. (2017) menunjukkan bagaimana SCADA berbasis web dapat dirancang untuk memantau dan mengendalikan sistem rumah secara otomatis menggunakan PLC dan antarmuka berbasis browser \parencite{hazdi2017scada}. Sistem ini menunjukkan fleksibilitas SCADA dalam skala kecil serta potensi adaptasinya untuk kebutuhan rumah tangga atau industri kecil.
