--- a/bibtex/daftar-pustaka.bib
+++ b/bibtex/daftar-pustaka.bib
@@ -178,7 +178,7 @@
 @article{emmanni2025typescript,
   author  = {Emmanni, Phani Sekhar},
   title   = {The Role of TypeScript in Enhancing Development with Modern JavaScript Frameworks},
-  journal = {International Journal of Scientific & Engineering Research (IJSR)},
+  journal = {International Journal of Scientific and Engineering Research (IJSR)},
   volume  = {11},
   number  = {1},
   year    = {2025}
