add more reference on 2.1.6

--- a/bibtex/daftar-pustaka.bib
+++ b/bibtex/daftar-pustaka.bib
@@ -181,7 +181,8 @@
   journal = {International Journal of Scientific and Engineering Research (IJSR)},
   volume  = {11},
   number  = {1},
-  year    = {2025}
+  year    = {2025},
+  url = {https://www.researchgate.net/publication/380361058_The_Role_of_TypeScript_in_Enhancing_Development_with_Modern_JavaScript_Frameworks},
 }
 
 @article{abbas2015efficient,
@@ -191,11 +192,56 @@
   year    = {2015}
 }
 
+@article{ancona2018nodejs,
+  author       = {Ancona, Davide and Franceschini, Luca and Delzanno, Giorgio and Leotta, Maurizio and Ribaudo, Marina and Ricca, Filippo},
+  title        = {Towards Runtime Monitoring of Node.js and Its Application to the Internet of Things},
+  journal      = {arXiv preprint arXiv:1802.01790},
+  year         = {2018},
+  url          = {https://arxiv.org/abs/1802.01790},
+  doi          = {10.48550/arXiv.1802.01790},
+  journal_ref  = {EPTCS 264, 2018, pp.\ 27--42}
+}
+
+@article{jointjs2023scada,
+  author  = {{Client IO}},
+  title   = {SCADA HMI Demo using Angular and JointJS+},
+  journal = {JointJS Official Demos},
+  year    = {2023},
+  url     = {https://www.jointjs.com/demos/scada},
+  note    = {Accessed: 2025-07-19}
+}
+
+@article{bhanarkar2023responsive,
+  author  = {Bhanarkar, Noorkaran and Paul, Aditi and Mehta, Ashima},
+  title   = {Responsive Web Design and Its Impact on User Experience},
+  journal = {International Journal of Advanced Research in Science, Communication and Technology},
+  year    = {2023},
+  volume  = {50},
+  pages   = {50--55},
+  doi     = {10.48175/ijarsct-9259},
+  url     = {https://resmilitaris.net/uploads/paper/71c5ba28e79bacafb5bcd0f4dc298d3a.pdf},
+  note    = {Accessed: 2025-07-19}
+}
+
+@article{singh2014responsive,
+  author  = {Singh, Vibhakar},
+  title   = {Designing Responsive Websites Using HTML and CSS},
+  journal = {International Journal of Scientific \& Technology Research},
+  year    = {2014},
+  volume  = {3},
+  number  = {11},
+  pages   = {92--94},
+  url     = {https://www.ijstr.org/final-print/nov2014/Designing-Responsive-Websites-Using-Html-And-Css.pdf},
+  note    = {Accessed: 2025-07-19}
+}
+
+
 @article{scarsbrook2023typescript,
   author  = {Scarsbrook, Joshua D. and Utting, Mark and Ko, Ryan K.~L.},
   title   = {TypeScript's Evolution: An Analysis of Feature Adoption Over Time},
   journal = {arXiv preprint arXiv:2303.09802},
-  year    = {2023}
+  year    = {2023},
+  url =  {https://arxiv.org/abs/2303.09802},
 }
 
 @article{omidi2023node_red_scada,
